<resources>
    <string name="app_name">Timber!</string>
    <string name="logo">Logo</string>
    <string name="login_email">Continue with Email</string>
    <string name="welcome_timber">Welcome to Timber!</string>
    <string name="nothing_to_see">Nothing to see here (in development)</string>
    <string name="sign_out">Sign out</string>
    <string name="write_to_db">Write to DB</string>
    <string name="read_from_db">Read from DB</string>
    <string name="open_profile">Open Profile</string>
    <string name="logout">Logout</string>
    <string name="action_settings">Settings</string>
    <string name="help">Help</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="profile">Profile</string>
    <string name="profession">Profession</string>
    <string name="save_changes">Save Changes</string>
    <string name="background_image">Background Image</string>
    <string name="full_name">Full name</string>
    <string name="user_name">User name</string>
    <string name="burning_question">Burning question</string>
    <string name="degree">Degree</string>
    <string name="university">University</string>
    <string name="graduating_year">Graduating year</string>
    <string name="location">Current location</string>
    <string name="discard_changes">Discard Changes</string>
    <string-array name="university_array">
        <item>Acadia University</item>
        <item>Algoma University</item>
        <item>Ambrose University</item>
        <item>Aurora College</item>
        <item>Bishop\'s University</item>
        <item>Brandon University</item>
        <item>British Columbia Institute of Technology</item>
        <item>Brock University</item>
        <item>Burman University</item>
        <item>Campion College at the University of Regina</item>
        <item>Canadian Mennonite University</item>
        <item>Cape Breton University</item>
        <item>Capilano University</item>
        <item>Carleton University</item>
        <item>Collège militaire royal du Canada</item>
        <item>College of the North Atlantic</item>
        <item>Collège Universitaire Dominicain</item>
        <item>Concordia University</item>
        <item>Concordia University of Edmonton</item>
        <item>Crandall University</item>
        <item>Dalhousie University</item>
        <item>École de Technologie Supérieure</item>
        <item>École Nationale d\'Administration Publique</item>
        <item>École Polytechnique de Montréal</item>
        <item>Emily Carr University of Art and Design</item>
        <item>First Nations University of Canada</item>
        <item>HEC Montréal</item>
        <item>Kingswood University</item>
        <item>Kwantlen Polytechnic University</item>
        <item>Lakehead University</item>
        <item>Laurentian University</item>
        <item>Luther College at the University of Regina</item>
        <item>MacEwan University</item>
        <item>McGill University</item>
        <item>McMaster University</item>
        <item>Memorial University of Newfoundland</item>
        <item>Mount Allison University</item>
        <item>Mount Royal University</item>
        <item>Mount Saint Vincent University</item>
        <item>Nicola Valley Institute of Technology</item>
        <item>Nipissing University</item>
        <item>Northern Alberta Institute of Technology</item>
        <item>NSCAD University</item>
        <item>OCAD University</item>
        <item>Queen\'s University</item>
        <item>Redeemer University College</item>
        <item>Royal Roads University</item>
        <item>Ryerson University</item>
        <item>Saint Mary\'s University</item>
        <item>SAIT Polytechnic</item>
        <item>Simon Fraser University</item>
        <item>St Mary\'s University</item>
        <item>St. Francis Xavier University</item>
        <item>St. Stephen\'s University</item>
        <item>St. Thomas More College</item>
        <item>St. Thomas University</item>
        <item>The King’s University</item>
        <item>The University of British Columbia</item>
        <item>The University of Western Ontario</item>
        <item>The University of Winnipeg</item>
        <item>Thompson Rivers University</item>
        <item>Trent University</item>
        <item>Trinity Western University</item>
        <item>Université de Moncton</item>
        <item>Université de Montréal</item>
        <item>Université de Saint-Boniface</item>
        <item>Université de Sherbrooke</item>
        <item>Université du Québec</item>
        <item>Université du Québec à Chicoutimi</item>
        <item>Université du Québec à Montréal</item>
        <item>Université du Québec à Rimouski</item>
        <item>Université du Québec à Trois-Rivières</item>
        <item>Université du Québec en Abitibi-Témiscamingue</item>
        <item>Université du Québec en Outaouais</item>
        <item>Université Laval</item>
        <item>Université Sainte-Anne</item>
        <item>University Canada West</item>
        <item>University of Alberta</item>
        <item>University of Calgary</item>
        <item>University of Guelph</item>
        <item>University of King\'s College</item>
        <item>University of Lethbridge</item>
        <item>University of Manitoba</item>
        <item>University of New Brunswick</item>
        <item>University of Northern British Columbia</item>
        <item>University of Ontario Institute of Technology</item>
        <item>University of Ottawa</item>
        <item>University of Prince Edward Island</item>
        <item>University of Regina</item>
        <item>University of Saskatchewan</item>
        <item>University of the Fraser Valley</item>
        <item>University of Toronto</item>
        <item>University of Victoria</item>
        <item>University of Waterloo</item>
        <item>University of Windsor</item>
        <item>Vancouver Island University</item>
        <item>Wilfrid Laurier University</item>
        <item>York University</item>
        <item>Yorkville University</item>
    </string-array>
</resources>