<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".SecondActivity" android:background="#3F51B5">

    <Button
            android:text="@string/sign_out"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_above="@id/welcome"
            android:layout_marginBottom="20pt"
            android:textColor="@color/white"
            android:backgroundTint="@color/reddish"
            android:id="@+id/signOutBtn"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:id="@+id/welcome"
            android:textColor="@color/white"
            android:text="@string/welcome_timber"
            android:textSize="16pt"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/welcome"
            android:layout_marginTop="20pt"
            android:textColor="@color/white"
            android:text="@string/nothing_to_see"/>

</RelativeLayout>