<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:background="@color/colorPrimaryDark"
              tools:context=".ProfileEdit">

    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:orientation="vertical">

        <RelativeLayout
                android:id="@+id/inner_relativelayout1"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:background="@color/red">

            <RelativeLayout
                    android:id="@+id/inner_relativelayout2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/turquoise">

                <ImageView
                        android:id="@+id/logo"
                        android:layout_width="match_parent"
                        android:layout_height="180dp"
                        android:scaleType="fitXY"
                        android:src="@drawable/ic_logo_85"
                        android:contentDescription="@string/logo"/>
            </RelativeLayout>

            <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/HomeFragmentProfileImageView"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="85dp"
                    app:civ_border_width="4dp"
                    app:civ_border_color="@color/red"
                    android:src="@drawable/man"/>

            <TextView
                    android:id="@+id/ProjectNameTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/HomeFragmentProfileImageView"
                    android:layout_marginTop="20dp"
                    android:layout_centerHorizontal="true"
                    android:text="@string/profile"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold"/>
        </RelativeLayout>

        <LinearLayout
                android:id="@+id/viewB"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:padding="30dp"
                android:background="@color/midBlue"
                android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_user_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                        android:id="@+id/input_user_name_edit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/user_name"
                        android:inputType="text"
                        android:padding="10dp"
                        android:singleLine="true"
                        android:drawableStart="@drawable/ic_person"
                        android:drawablePadding="10dp"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_profession"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp">

                <android.support.design.widget.TextInputEditText
                        android:id="@+id/input_profession_edit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/profession"
                        android:inputType="textCapSentences|textAutoCorrect"
                        android:padding="10dp"
                        android:singleLine="true"
                        android:drawableStart="@drawable/ic_briefcase"
                        android:drawablePadding="10dp"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_burningq"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp">

                <android.support.design.widget.TextInputEditText
                        android:id="@+id/input_burningq_edit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/burning_question"
                        android:inputType="textCapSentences|textAutoCorrect"
                        android:padding="10dp"
                        android:singleLine="true"
                        android:drawableStart="@drawable/ic_exclamation"
                        android:drawablePadding="10dp"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_degree"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp">

                <android.support.design.widget.TextInputEditText
                        android:id="@+id/input_degree_edit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/degree"
                        android:inputType="textCapSentences|textAutoCorrect"
                        android:padding="10dp"
                        android:singleLine="true"
                        android:drawableStart="@drawable/ic_diploma"
                        android:drawablePadding="10dp"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_university"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp">

                <AutoCompleteTextView
                        android:id="@+id/input_university_edit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/university"
                        android:inputType="textCapSentences|textAutoCorrect"
                        android:padding="10dp"
                        android:singleLine="true"
                        android:drawableStart="@drawable/ic_location"
                        android:drawablePadding="10dp"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_graduateyear"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp">

                <android.support.design.widget.TextInputEditText
                        android:id="@+id/input_graduateyear_edit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/graduating_year"
                        android:inputType="number"
                        android:padding="10dp"
                        android:singleLine="true"
                        android:drawableStart="@drawable/ic_calendar"
                        android:drawablePadding="10dp"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_location"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp">

                <AutoCompleteTextView
                        android:id="@+id/input_location_edit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/location"
                        android:inputType="textCapSentences|textAutoCorrect"
                        android:padding="10dp"
                        android:singleLine="true"
                        android:drawableStart="@drawable/ic_location"
                        android:drawablePadding="10dp"/>
            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="horizontal">
                <Button
                        android:id="@+id/save_changes_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginEnd="10dp"
                        android:backgroundTint="@color/red"
                        android:text="@string/save_changes"
                        android:textColor="@android:color/black"/>
                <Button
                        android:id="@+id/discard_changes_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginStart="10dp"
                        android:backgroundTint="@color/red"
                        android:text="@string/discard_changes"
                        android:textColor="@android:color/black"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>